--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,7 @@
 version: "3.7"
 
 services:
-  # api:
-  #   build: ./api
-  #   ports:
-  #     - 5000:5000
-  #   volumes:
-  #     - ./api/app:/app
   bot:
     build: ./bot
 #    volumes:
-#      - ./bot/app:/app
+#      - ./bot/wenmoon/settings.cfg:/app/wenmoon/settings.cfg
